entity ok + fixture ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,10 +55,11 @@
 
         <footer>
             <!-- logos réseau sociaux -->
-            <img src="assets/images/reseaux_sociaux/instagram.svg" alt="instagram">
-            <img src="assets/images/reseaux_sociaux/pinterest.svg" alt="pinterest">
-            <img src="assets/images/reseaux_sociaux/twitter.svg" alt="twitter">
-            <img src="assets/images/reseaux_sociaux/facebook.svg" alt="facebook">
+      
+            <img src={{ asset ('images/reseaux_sociaux/instagram.svg') }} alt="instagram">
+            <img src={{ asset ('images/reseaux_sociaux/pinterest.svg') }} alt="pinterest">
+            <img src={{ asset ('images/reseaux_sociaux/twitter.svg') }} alt="twitter">
+            <img src={{ asset ('images/reseaux_sociaux/facebook.svg') }} alt="facebook">
         </footer>
 
         <!-- -->
