app_plats_by_categorie

--- a/templates/catalogue/app_catalogue.html.twig
+++ b/templates/catalogue/app_catalogue.html.twig
@@ -3,18 +3,28 @@
 {% block title %}Hello CatalogueController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="container justify-content-center">
+		<div class="row">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/CatalogueController.php</code></li>
-        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/catalogue/index.html.twig</code></li>
-    </ul>
-</div>
+			{% for categorie in categories %}
+
+				<div class="card col-6 mb-3 mx-5" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="{{ asset ('images/category/' ~ categorie.image)}}" class="img-fluid rounded-start" alt="{{ categorie.libelle }}-image">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">{{ categorie.libelle }}</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
+
