--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}MonRestaurant
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
@@ -18,27 +18,33 @@
 	<body>
 		<!-- ici le header  -->
 		<!--ici on insère la balise video -->
-    <video autoplay muted loop id="myVideo"> <source src="public/videos/video_plat.mp4" type="video_plat/mp4">
+			<video autoplay muted loop id="myVideo" width="100%"> <source src="{{asset ('videos/video_plat.mp4')}}" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
 
+
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Navbar</a>
+				{# <a class="navbar-brand" href="{{ path ('app_catalogue') }}">Accueil #}
+				<img src="{{ asset('images/the_district_brand/favicon.png')}}" alt="logo" width="130" height="120">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="{{ path ('app_catalogue') }}">Accueil</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Features</a>
+							<a class="nav-link" href="{{ path ('app_categories') }}">Catégories</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Pricing</a>
+							<a class="nav-link" href="{{ path ('app_plat') }}">Plats</a>
 						</li>
+							<li class="nav-item">
+							<a class="nav-link" href="{{ path ('app_show_contact') }}">Contact</a>
+						</li>
+						
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 								Dropdown link
@@ -63,6 +69,7 @@
 		<!-- -->
 
 		{% block body %}{% endblock %}
+
 
 		<!-- ici le footer -->
 
