--- a/templates/catalogue/app_plats_by_categorie.html.twig
+++ b/templates/catalogue/app_plats_by_categorie.html.twig
@@ -1,20 +1,97 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CatalogueController!{% endblock %}
+{% block title %}Mes plats par categorie{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container-fluid" >
+  <div class="row justify-content-center">
+    <div class="col-md-6 mx-5 card mb-3 mx-5" style="max-width: 540px;">
+      <div class="row g-0">
+          <div class="col-md-4">
+            <img src={{"assets/images/food/tagliatelles-saumon.webp" }}class="img-fluid rounded-start" alt={{"Pâtes"}}>
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">{{Pâtes}}</h5>
+              <p class="card-text">
+              <p class="card-text"><small class="text-body-secondary">ici le texte</small></p>
+              <textarea>{{Commander}}</textarea>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/CatalogueController.php</code></li>
-        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/catalogue/index.html.twig</code></li>
-    </ul>
+      <div class="col-md-6 mx-5 card mb-3 mx-5" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src={{"..assets/img/food/hamburger.jpg"}} class="img-fluid rounded-start" alt={{"hamburger"}}>
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">{{Viande}}</h5>
+              <p class="card-text">Hamburger à la viande hachée, tomate, salade, fromage
+              <p class="card-text"><small class="text-body-secondary">ici le texte</small></p>
+              <textarea>{{Commander}}</textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="card mb-3 mx-5 col-md-6" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src={{"..assets/images/food/cesar_salad.jpg"}} class="img-fluid rounded-start" alt="{{Salade}}">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">{{Salade}}</h5>
+              <p class="card-text">{{Salade César}}</p>
+              <p class="card-text"><small class="text-body-secondary">ici le texte</small></p>
+              <textarea>{{Commander}}</textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+<div class="card mb-3 mx-5  col-md-6" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="{{..assets/images/pizza.jpg.}}" class="img-fluid rounded-start" alt="{{Pizza}}">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">{{Pizza}}</h5>
+              <p class="card-text">Pizza aux légumes
+              <p class="card-text"><small class="text-body-secondary">ici le texte</small></p>
+              <textarea>{{Commander}}</textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
+
+
+
+div class="card mb-3 mx-5 col-md-6" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="{{..assets/img/food/salad1.png}}" class="img-fluid rounded-start" alt="{{Salade}}">
+          </div>
+          <div class="col-md-6">
+            <div class="card-body">
+              <h5 class="card-title">{{Salade}}</h5>
+              <p class="card-text">{{Salade César}}</p>
+              <p class="card-text"><small class="text-body-secondary">ici le texte</small></p>
+              <textarea>{{Commander}}</textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
 {% endblock %}
