--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PanierControleur{% endblock %}
+{% block title %}Hello UtilisateurController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/PanierController.php</code></li>
-        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/panier/index.html.twig</code></li>
+        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/UtilisateurController.php</code></li>
+        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/utilisateur/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
