--- a/templates/catalogue/app_plats.html.twig
+++ b/templates/catalogue/app_plats.html.twig
@@ -9,13 +9,15 @@
    <div class="card col-6 mb-3 mx-5" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="{{ asset ('id/category/' ~ plat.id)}}" class="img-fluid rounded-start" alt="{{ plat.libelle }}-id">
+      <img src="{{ asset ('images/food/' ~ plat.image)}}" class="img-fluid rounded-start" alt="{{ plat.libelle }}-id">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">{{ id.libelle }}</h5>
+        <h5 class="card-title">{{ plat.libelle }}</h5>
+        <p>{{ plat.description }}</p>
       </div>
     </div>
   </div>
 </div>
+{% endfor %}
 {% endblock %}
