--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PanierControleur{% endblock %}
+{% block title %}Mon Panier{% endblock %}
 
 {% block body %}
 <style>
