--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
 			<div class="container-fluid">
 				{# <a class="navbar-brand" href="{{ path ('app_catalogue') }}">Accueil #}
-				<img src="{{ asset('images/the_district_brand/favicon.png')}}" alt="logo" width="130" height="120">
+				<img src="{{ asset('images/the_district_brand/logo.png')}}" alt="logo" width="130" height="120">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -39,7 +39,7 @@
 							<a class="nav-link" href="{{ path ('app_categories') }}">Catégories</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path ('app_plat') }}">Plats</a>
+							<a class="nav-link" href="{{ path ('app_plats') }}">Plats</a>
 						</li>
 							<li class="nav-item">
 							<a class="nav-link" href="{{ path ('app_show_contact') }}">Contact</a>
