--- a/templates/catalogue/app_categories.html.twig
+++ b/templates/catalogue/app_categories.html.twig
@@ -4,18 +4,26 @@
 
 {% block body %}
 
-   <div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-</div>
+	<div class="container justify-content-center">
+		<div class="row">
+
+			{% for categorie in categories %}
+
+				<div class="card col-6 mb-3 mx-5" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="{{ asset ('images/category/' ~ categorie.image)}}" class="img-fluid rounded-start" alt="{{ categorie.libelle }}-image">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">{{ categorie.libelle }}</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+			{% endfor %}
+		</div>
+	</div>
 {% endblock %}
