--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
 							<a class="nav-link" href="{{ path ('app_plats') }}">Plats</a>
 						</li>
 							<li class="nav-item">
-							<a class="nav-link" href="{{ path ('app_show_contact') }}">Contact</a>
+							<a class="nav-link" href="{{ path ('app_contact') }}">Contact</a>
 						</li>
 						
 						<li class="nav-item dropdown">
