--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %} Nous Contacter{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<div class="container">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/ContactController.php</code></li>
-        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/contact/index.html.twig</code></li>
-    </ul>
-</div>
+    <h1>Formulaire de contact</h1>
+
+    {{form(form) }} 
+
+  </div>
 {% endblock %}
