--- a/templates/catalogue/app_catalogue.html.twig
+++ b/templates/catalogue/app_catalogue.html.twig
@@ -8,22 +8,21 @@
 		<div class="row">
 
 			{% for categorie in categories %}
-
-				<div class="card col-6 mb-3 mx-5" style="max-width: 540px;">
-					<div class="row g-0">
-						<div class="col-md-4">
-							<img src="{{ asset ('images/category/' ~ categorie.image)}}" class="img-fluid rounded-start" alt="{{ categorie.libelle }}-image">
-						</div>
-						<div class="col-md-8">
-							<div class="card-body">
-								<h5 class="card-title">{{ categorie.libelle }}</h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-			{% endfor %}
+    <div class="card col-6 mb-3 mx-5" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <a href="{{ path('app_plats_by_categorie', {'categorie_id': categorie.id}) }}">
+                    <img src="{{ asset ('images/category/' ~ categorie.image)}}" class="img-fluid rounded-start" alt="{{ categorie.libelle }}-image">
+                </a>
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">{{ categorie.libelle }}</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endfor %}
 		</div>
 	</div>
 {% endblock %}
