--- a/templates/plat/index.html.twig
+++ b/templates/plat/index.html.twig
@@ -1,20 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PlatController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{% for plat in plats %}
+ 
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/PlatController.php</code></li>
-        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/plat/index.html.twig</code></li>
-    </ul>
-</div>
+div class="card col-6 mb-3 mx-5" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="{{ asset ('images/plats/' ~ plat.image)}}" class="img-fluid rounded-start" alt="{{ plat.libelle }}-image">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">{{ plat.libelle }}</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+{%%{% endfor %}%}
+
 {% endblock %}
