Mise en place href pour le panier. Panier en cours de construction.

--- a/templates/catalogue/app_plats_by_categorie.html.twig
+++ b/templates/catalogue/app_plats_by_categorie.html.twig
@@ -33,7 +33,7 @@
             <div class="card-body">
               <h5 class="card-title">{{ plat.libelle }}</h5>
               <p class="card-text">{{ plat.description }}</p>
-              <a src="" class="btn btn-primary">Commande</a>
+              <a href="{{ path('app_show_panier') }}" class="btn btn-primary">Commande</a>
             </div>
           </div>
         </div>
