--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -2,6 +2,14 @@
 
 {% block title %}Mon Panier{% endblock %}
 
+
+
+    
+
+   
+
+
+
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
@@ -13,6 +21,12 @@
 
     This friendly message is coming from:
     <ul>
+        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/PanierController.php</code></li>
+        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/panier/index.html.twig</code></li>
+    </ul>
+</div>
+
+
         <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/PanierController.php</code></li>
         <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/panier/index.html.twig</code></li>
     </ul>
