--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,17 +67,19 @@
 			</div>
 		</nav>
 
-		{% block body %}{% endblock %}
+		{% block body %}
+
+		 <div class="container-fluid">
+  <h1>My First Bootstrap Page</h1>
+  <p>This is some text.</p>
+</div> 
+
+		{% endblock %}
 
 		<!-- -->
 
 
-		<div class="float-sm-end">Float end on viewports sized SM (small) or wider</div><br>
-		<div class="float-md-end">Float end on viewports sized MD (medium) or wider</div><br>
-		<div class="float-lg-end">Float end on viewports sized LG (large) or wider</div><br>
-		<div class="float-xl-end">Float end on viewports sized XL (extra large) or wider</div><br>
-		<div class="float-xxl-end">Float end on viewports sized XXL (extra extra large) or wider</div><br>
-
+		
 
 		<!-- ici le footer -->
 
