--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,34 +1,148 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon Panier{% endblock %}
-
-
-
-    
-
-   
-
-
+{% block title %}Panier
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Mon panier </h1>
+	<div class="container-fluid g-0">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/PanierController.php</code></li>
-        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/panier/index.html.twig</code></li>
-    </ul>
-</div>
+		<section class="bg-ligth p-3">
+			<h1>
+				Votre Panier
+			</h1>
+		</section>
+
+		<div class="row justify-content-center">
+
+			<div class="col-md-9 col ">
+
+				<table class="table table-hover">
+
+					<thead>
+
+						<tr>
+							<th class="text-center"></th>
+							<th class="text-center">Produit</th>
+							<th class="text-center">Prix</th>
+							<th class="text-center">Quantité</th>
+							<th class="text-center">Total</th>
+							<th class="text-md-center"></th>
+						</tr>
+
+					</thead>
+
+					<tbody>
+
+						{% for element in dataPanier %}
+
+							<tr>
+								<td class="text-center align-middle"><img src="{{ asset ('img/food/' ~ element.plat.image) }}" alt="{{ element.plat.libelle }}-food" class="d-none d-md-block img-fluid imagepanier"></td>
+								<td class="text-center align-middle">{{ element.plat.libelle }}</td>
+								<td class="text-center align-middle">{{ element.plat.prix }}
+									€</td>
+								<td class="text-center align-middle">{{ element.quantite }}</td>
+								<td class="text-center align-middle">{{ element.plat.prix * element.quantite }}
+									€</td>
+								<td class="text-md-center align-middle">
+
+									<a href="{{ path ("app_add_plat" , {id: element.plat.id}) }}" class="btn btn-success">
+										<i class="bi bi-cart-plus"></i>
+									</a>
+
+									<a href="{{ path ("app_remove_one_plat" , {id: element.plat.id}) }}" class="btn btn-warning my-3 my-md-0 mx-md-3">
+										<i class="bi bi-cart-dash"></i>
+									</a>
+
+									<a href="{{ path ("app_remove_plat" , {id: element.plat.id}) }}" class="btn btn-danger">
+										<i class="bi bi-cart-x"></i>
+									</a>
+
+								</td>
+							</tr>
+
+						{% else %}
+
+							<tr>
+								<td colspan="6" class="text-center">Votre Panier est vide</td>
+							</tr>
+
+						{% endfor %}
+
+					</tbody>
+
+					<tfoot class="d-md-none">
+						<tr>
+							<td colspan="3">Total :</td>
+							<td class="text-md-end">{{ total }}
+								€</td>
+							<td colspan="2">
+								{# <a class="link-body-emphasis link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover justify-content-center" href="{{ path ('app_commandeLivraison') }}">
+									<button class="btn btn-primary">Commander</button>
+								</a> #}
+							</td>
+						</tr>
+					</tfoot>
+
+				</table>
+
+			</div>
 
 
-        <li>Your controller at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/src/Controller/PanierController.php</code></li>
-        <li>Your template at <code>/home/jippe/Chantal/DevAppli/MonRestaurant/templates/panier/index.html.twig</code></li>
-    </ul>
-</div>
+			<div class="col-2 d-md-block d-none p-0">
+				<table class="bg-light col-1 table">
+					<thead>
+						<tr>
+							<th class="text-start" scope="col">Total :</th>
+							<th></th>
+							<th class="text-end">
+								<a href="{{ path ("app_remove_all_plat") }}" class="btn btn-danger">
+									<i class="bi bi-cart-x"></i>
+								</a>
+							</th>
+						</tr>
+
+					</thead>
+					<tbody>
+						{% for element in dataPanier %}
+
+							<tr>
+								<td class="text-center align-middle">{{ element.plat.prix }}
+									€</td>
+								<td class="text-center align-middle">
+									x
+								</td>
+								<td class="text-center align-middle">{{ element.quantite }}</td>
+							</tr>
+						{% else %}
+
+							<tr>
+								<td colspan="5" class="text-center">Votre Panier est vide</td>
+							</tr>
+
+						{% endfor %}
+
+						<tr>
+							<td colspan="3" class="text-center">Sous-total ({{ dataPanier | length}}
+								article
+								{% if dataPanier | length > 1 %}s
+								{% endif %}) :
+								{{ total }}.00 €</td>
+						</tr>
+
+						<tr>
+							<td colspan="3" class="text-end">
+								<a class="link-body-emphasis link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover justify-content-center" href="#">
+									<button class="btn btn-primary">Commander</button>
+								</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+		</div>
+
+
+	</div>
 {% endblock %}
